removed table of contents

--- a/Titanic_Kaggle_Comp.qmd
+++ b/Titanic_Kaggle_Comp.qmd
@@ -3,7 +3,7 @@ pdf: default
 ---
 title: "Titanic Challenge Kaggle"
 author: "Itsara McCarthy"
-toc: true
+toc: false
 format: 
   html: default
   gfm: default
