Revert last commit

--- a/Titanic_Kaggle_Comp.qmd
+++ b/Titanic_Kaggle_Comp.qmd
@@ -1,9 +1,7 @@
-pdf: default
-
 ---
 title: "Titanic Challenge Kaggle"
 author: "Itsara McCarthy"
-toc: false
+toc: true
 format: 
   html: default
   gfm: default
